removed tests and ClassRecord dependency on jdk.jdeps/com.sun.tools.classfile